--- a/test.html
+++ b/test.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="common/css/common.css">
-    <script src="common/js/corrector.js"></script>
-    <script src="common/js/init.js"></script>
+    <link rel="stylesheet" href="common.css">
+    <script src="corrector.js"></script>
+    <script src="init.js"></script>
 </head>
 <body>
 <div>
