Modify addHandler, file-structure

--- a/test.html
+++ b/test.html
@@ -2,15 +2,17 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Corrector</title>
-    <link rel="stylesheet" href="common/css/common.css">
-    <script src="common/js/corrector.js"></script>
-    <script src="common/js/init.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CORRECTOR</title>
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 <div>
     <label for="user_input"><b>Enter some text and watch the result</b></label>
     <textarea id="user_input"></textarea>
 </div>
+<script src="assets/js/corrector.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
